secondfile/objects/RDS_ALB_Access_Circuits__c.object
<CustomObject>
    <description>Premise Details-Premise Data-Circuit and VLAN Details-ALB Access Circuits</description>
    <fields>
        <fullName>ALB_Premise_Number__c</fullName>
        <description>Technical Field to associate ALB --&gt; CVLAN --&gt; Premise. Not required on Page layout.</description>
        <formula>Circuit_and_VLAN_Details__r.CVLAN_Premise_Number__c</formula>
        <label>ALB Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Circuit_ID__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-ALB Access Circuits-Access Circuit ID</description>
        <label>Access Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_and_VLAN_Details__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Premise Details-Premise Data-Circuit and VLAN Details</description>
        <label>Circuit and VLAN Details</label>
        <referenceTo>Circuit_and_VLAN_Details__c</referenceTo>
        <relationshipName>ALB_Access_Circuits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-ALB Access Circuits-Primary Indicator</description>
        <label>Primary Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_Number__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-ALB Access Circuits-USO Number</description>
        <label>USO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDS-ALB Access Circuits</label>
    <nameField>
        <displayFormat>ALB - {000000}</displayFormat>
        <label>ALB Access Circuits  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-ALB Access Circuits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lookup_to_CVLAN_cannot_be_updated_onALB</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Circuit_and_VLAN_Details__c )</errorConditionFormula>
        <errorMessage>The reference to Circuit and VLAN Details cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RDS_Edit_Expired</fullName>
        <active>true</active>
        <description>RDS Edit Expired</description>
        <errorConditionFormula>AND(
	OR(
		if(Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Edit_Expired_Date__c&lt;NOW(),True,False),
		ISPICKVAL( Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;)),
		!ISCHANGED( Access_Circuit_ID__c),
		!ISCHANGED( USO_Number__c),
		$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
		$Profile.Name &lt;&gt;&quot;System Administrator&quot;,$Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot;,

 $Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;, $Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_ALBCkt</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-ALB Access Circuits record.</errorMessage>
    </validationRules>
</CustomObject>